* 2013-12-06 - thorben.betten@open-xchange.com

 - Fix for bug 30190: Fixed parsing of CLI call
 - Fix for bug 29729: Ignore possible "404 Not Found" HTTP error if S3 bucket is supposed to be deleted anyway

* 2013-12-05 - tobias.friedrich@open-xchange.com

 - Fix for bug 30123: Remotely distribute and handle password change event  
 - Fix for bug 30186: Obfuscate sensitive data on update operation in distributed map  

* 2013-12-04 - thorben.betten@open-xchange.com

 - Fix for bug 30154: Don't abort importing Google contacts if no more contact images are allowed to be fetched due to temporary rate limiting
 - Fix for bug 30146: Doubled accepted length of HTML content when performing in-depth sanitizing (white-list, etc.)

* 2013-12-04 - tobias.friedrich@open-xchange.com

 - Fix for bug 29847: Don't create HTTP session implicitly 

* 2013-12-03 - thorben.betten@open-xchange.com

 - Fix for bug 29816: Added "TLSv1" to enabled protocols accepted by Open-Xchange as a client
 - Fix for bug 30135: Added null guard when parsing user attributes delivered via SOAP
 - Fix for bug 30115: Introduced possibility to specify an IP-based black-list for mail account hosts

* 2013-12-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 30100: Include causing throwable for java.io.FileNotFoundException 

* 2013-12-02 - thorben.betten@open-xchange.com

 - Fix for bug 30119: Avoid superfluous database updates on JSlob write-back requests
 - Fix for bug 30114: Properly sanitize CSS selectors
 - Fix for bug 29809: Drop personal in formation leftovers from backup tables

* 2013-11-29 - jan.bauerdick@open-xchange.com

 - Fix for bug 29495: Removed port 587 from list of secure smtp ports
 - Fix for bug 30050: Extended logging for folders

* 2013-11-29 - thorben.betten@open-xchange.com

 - Fix for bug 30069: Fixed regex to match a publication URL to support any word character, but not only alphabetic ones

* 2013-11-29 - martin.herfurth@open-xchange.com
